# 883AI

./: .gitignore  README.md  requirements.txt
001python基础/: README.md
002python习题练习/: 第三章基本数据类型.ipynb  第五章python程序结构.ipynb  第六章函数.ipynb  第四章python组合数据类型.ipynb
007工程化/: 美团机器学习实践_知识概览.md  美团机器学习实践_第1章_问题建模.md
reptile/: test.py
tensflow-demo/mytmp/: events.out.tfevents.1702650891.j-duchunyu-d3.corp.qihoo.net
研究生作业/: 算法第一次作业.ipynb
研究生作业/.obsidian/: workspace.json
研究生作业/人工智能原理与应用/: 作业1-黑白棋+MCTS.ipynb  实验报告.md
研究生作业/人工智能原理与应用/倒立摆/: GAE详解.md  README_cartpole_ppo.md  cartpole_ppo.py  作业4-ppo-carpole.ipynb  实践指南.md  实验报告.md  核心理论与业务设计.md  训练阶段识别方法.md
研究生作业/人工智能原理与应用/花卉识别/: results.json  文件结构说明.md
研究生作业/人工智能原理与应用/黑白棋/: MCTS.ipynb  reversi_mcts.py
研究生作业/强化学习/: .gitignore  pyproject.toml  q_learning_report.py  q_learning_taxi.py  q_learning_taxi_Python语法导读.md  什么是Q-learning.md  代码讲解与强化学习理论.md
研究生作业/强化学习-DQN/: .gitignore  README.md  dqn_cartpole.py  pyproject.toml
研究生作业/深度学习/: .gitignore  README.md  pyproject.toml  summarize_results.py  train.py
研究生作业/深度学习/reports/: CNN从零开始教程.md  MLP从零开始教程.md  实验报告.md  工程实现思路详解.md  深度学习完整学习大纲.md  项目完整描述.md  项目讲解与算法详解.md
研究生作业/深度学习/src/: __init__.py  models.py  trainer.py
研究生作业/视觉/Assignment2/: .gitignore  Assignment2 Guide.docx  Inline_Questions.md  Notebook_TODO_实现.md  features.ipynb  kNN实验报告.md  kNN核心理论与业务设计.md  knn.ipynb  softmax.ipynb  svm.ipynb  two_layer_net.ipynb  作业分析.md
研究生作业/视觉/Assignment3/: README.md  data_loader.py  evaluate.py  main.py  metrics.py  model.py  requirements.txt  run.sh  test_setup.py  train.py  (+1 more)
(+116 files in other folders)
