[project]
name = "dl-cifar100-homework"
version = "0.1.0"
description = "深度学习课程作业：CIFAR-100 分类实验"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
]

[tool.uv]
package = false
